syntax = "proto3";

option csharp_namespace = "Saapp.AndroidAPI.Endpoints.GRPC.Sales.Direction.Protos";
option java_multiple_files = true;
option java_package = "com.saphamrah.protos";
option java_outer_classname = "DirectionProto";
option objc_class_prefix = "HLW";

package Sales;

service Direction{
  rpc GetDirection(DirectionRequest) returns(DirectionReplyList);
}

message DirectionRequest{
}

message DirectionReply{
  int32 DirectionID = 1 ;
  int32 SellerID = 2;
  string DirectionName = 3;
  int32 VisitTour = 4;
  int32 VisitDirectionTodayID = 5;
}

message DirectionReplyList{
  repeated DirectionReply Directions = 1;
}


